# log-archiver

./: .dockerignore  Cargo.toml  Dockerfile  README.md  flake.nix  module.nix  overlay.nix  package.nix  schema.sql  sqlx-data.json
.github/workflows/: docker.yml
.sqlx/: query-bcd0843c15afc0443df1ab40d7d0c5632ab9d025cdcf3646f4e9d5872b7c8c89.json  query-e4dfb1fbca2c91ac837d11aff64e035ccce38867e3503653ec2ef28eeeb8907d.json
src/: main.rs
