[package]
name = "log-archiver"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.5", default_features = false, features = ["macros", "postgres", "json", "runtime-actix-rustls", "offline"] }
dotenv = "0.15"
main_error = "0.1.2"
tokio = { version = "1.17.0", features = ["macros", "time"] }
reqwest = { version = "0.11.10", default-features = false , features = ["rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
zip = "0.6.2"