[package]
name = "log-archiver"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.7.3", default_features = false, features = ["macros", "postgres", "json", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
main_error = "0.1.2"
tokio = { version = "1.36.0", features = ["macros", "time", "rt-multi-thread"] }
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4.34", features = ["serde"] }
zip = "0.6.6"
